--- a/site/about/overview.qmd
+++ b/site/about/overview.qmd
@@ -15,15 +15,19 @@ listing:
     - use-cases/sr-11-7.qmd
     - use-cases/ss1-23.qmd
     - use-cases/e-23.qmd
-  - id: validmind-features
+  - id: validmind-next-steps
     type: grid
     max-description-length: 500
     grid-columns: 2
     sort: false
     fields: [title, description]
     contents:
-    - overview-model-documentation.qmd
-    - overview-llm-features.qmd
+    - ../get-started/get-started.qmd
+    - ../training/training.qmd
+    - path: https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb
+      title: "Quickstart for model documentation"
+      subtitle: "Open notebook in JupyterHub {{< fa chevron-right >}}"
+      description: "Gets you started with the basic process of documenting models with {{< var vm.product >}}, from the {{< var vm.developer >}} to the {{< var vm.platform >}}."
 aliases:
   - /guide/overview.html
 ---
@@ -52,6 +56,7 @@ The platform is designed as a multi tier AI governance system that lets you defi
 
 ## {{< fa hand-point-right >}} Ready to try out {{< var vm.product >}}?
 
-Our [quickstarts](/get-started/get-started.qmd) are the quickest and easiest ways to try out our product features.
+:::
 
+:::{#validmind-next-steps}
 :::
