--- a/site/about/product-features.qmd
+++ b/site/about/product-features.qmd
@@ -1,6 +1,18 @@
 ---
 title: "Product features"
 date: last-modified
+listing:
+  - id: product-features
+    type: grid
+    max-description-length: 250
+    grid-columns: 2
+    sort: false
+    fields: [title, description]
+    contents:
+    - overview-model-documentation.qmd
+    - overview-llm-features.qmd
+    - deployment-options.qmd
+    - system-access-requirements.qmd
 ---
 
 {{< var validmind.product >}} provides two main product components, the {{< var validmind.developer >}} and the {{< var validmind.platform >}}.
@@ -34,17 +46,20 @@ The *{{< var validmind.platform >}}* is an easy-to-use web-based interface that 
 {{< include /about/glossary/key_concepts/_key-concepts.qmd >}}
 :::
 
-:::{#validmind-features}
+## Feature highlights
+
+:::{#product-features}
 :::
 
-## How do I get started?
+<!-- ## How do I get started? 
 
-On the {{< var validmind.platform >}}, everything starts with the inventory — you first register a new model or AI system and then manage the lifecycle through the different activities that are part of your existing governance processes.
+On the {{< var validmind.platform >}}, everything starts with the inventory — you first register a new model or AI system and then manage the lifecycle through the different activities that are part of your existing governance processes. -->
 
-### Approval workflow
+<!-- ### Approval workflow
 
-A typical high-level approval workflow looks like this:
+A typical high-level approval workflow looks like this: -->
 
+<!-- 
 ```{mermaid}
 graph LR
     A[Registration] --> B[Initial<br>validation]
@@ -52,9 +67,10 @@ graph LR
     C --> D[In production]
     D --> E[Periodic review<br>and revalidation]
     E --> B
-```
+``` 
+-->
 
-Registration[^1]
+<!-- Registration[^1]
 : Select a documentation template when registering a new inventory model to start your documentation. You then use the inventory to manage the metadata associated with the model or AI system, including all compliance and regulatory attributes. 
 
 Initial validation
@@ -67,10 +83,10 @@ In production
 : Use the model or AI system in production while ensuring its ongoing reliability, accuracy, and compliance with regulations by monitoring performance.
 
 Periodic review and revalidation
-: As part of regular performance monitoring or change management, you follow a process similar to that seen in the **Initial validation** step.
+: As part of regular performance monitoring or change management, you follow a process similar to that seen in the **Initial validation** step. -->
 
 <!-- FOOTNOTES -->
 
-[^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+<!-- [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Working with workflows](/guide/workflows/working-with-workflows.qmd)
+[^2]: [Working with workflows](/guide/workflows/working-with-workflows.qmd) -->
