--- a/site/training/ai-governance/ai-governance-register.qmd
+++ b/site/training/ai-governance/ai-governance-register.qmd
@@ -1,5 +1,5 @@
 ---
-title: "AI Governance Fundamentals"
+title: "AI Governance"
 subtitle: For {{< var vm.product >}}
 date: last-modified
 listing:
@@ -26,7 +26,7 @@ listing:
     - path: configuring-ai-workflows.html
       title: "Configuring AI workflows"
       subtitle: "Module 3"
-      description: "{{< fa check >}} Set up intake and approval workflows <br> {{< fa check >}} Configure human oversight controls <br> {{< fa check >}} Manage attestations and escalation paths"
+      description: "{{< fa check >}} Set up intake and approval workflows <br> {{< fa check >}} Configure human oversight controls <br> {{< fa check >}} Manage escalation paths"
       reading-time: "40"
       author: "{{< var vm.product >}}"
     - path: compliance-and-oversight.html
