--- a/site/training/ai-governance/compliance-and-oversight.qmd
+++ b/site/training/ai-governance/compliance-and-oversight.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Compliance and <br>Oversight"
-subtitle: "AI Governance Fundamentals — Module 4 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
+subtitle: "AI Governance — Module 4 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
   revealjs:
@@ -35,7 +35,7 @@ _"As a **compliance professional**, I want to map regulatory requirements, confi
 <br>
 This fourth module is part of a four-part series:
 <br><br>
-[AI Governance Fundamentals](/training/ai-governance/ai-governance-register.qmd){.button target="_blank"}
+[AI Governance](/training/ai-governance/ai-governance-register.qmd){.button target="_blank"}
 :::
 
 ## Module 4 — Contents {.center}
@@ -172,7 +172,7 @@ AI regulations evolve. Stay current by:
 
 ## Course completion {.center}
 
-Congratulations on completing **AI Governance Fundamentals**!
+Congratulations on completing **AI Governance**!
 
 You have learned:
 
@@ -182,5 +182,5 @@ You have learned:
 - Compliance and oversight practices
 
 ::: {.tc}
-[Return to AI Governance Fundamentals](ai-governance-register.qmd){.button target="_blank"}
+[Return to AI Governance](ai-governance-register.qmd){.button target="_blank"}
 :::
