--- a/site/training/ai-governance/configuring-ai-workflows.qmd
+++ b/site/training/ai-governance/configuring-ai-workflows.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Configuring <br>AI Workflows"
-subtitle: "AI Governance Fundamentals — Module 3 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
+subtitle: "AI Governance — Module 3 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
   revealjs:
@@ -35,7 +35,7 @@ _"As an **administrator**, I want to configure workflows that support AI governa
 <br>
 This third module is part of a four-part series:
 <br><br>
-[AI Governance Fundamentals](/training/ai-governance/ai-governance-register.qmd){.button target="_blank"}
+[AI Governance](/training/ai-governance/ai-governance-register.qmd){.button target="_blank"}
 :::
 
 ## Module 3 — Contents {.center}
@@ -44,7 +44,7 @@ This third module is part of a four-part series:
 1. [Intake workflows](#intake-workflows)
 2. [Approval workflows](#approval-workflows)
 3. [Human oversight controls](#human-oversight-controls)
-4. [Attestations and escalation](#attestations-and-escalation)
+4. [Escalations](#attestations-and-escalation)
 
 :::
 
@@ -141,7 +141,7 @@ Set up periodic review workflows:
 3. Track review completion
 4. Escalate overdue reviews
 
-# Attestations and escalation {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Escalations {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Attestations {.center}
 
