--- a/site/training/ai-governance/managing-ai-use-cases.qmd
+++ b/site/training/ai-governance/managing-ai-use-cases.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Managing <br>AI Use Cases"
-subtitle: "AI Governance Fundamentals — Module 2 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
+subtitle: "AI Governance — Module 2 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
   revealjs:
@@ -35,7 +35,7 @@ _"As an **AI governance professional**, I want to learn how to register AI use c
 <br>
 This second module is part of a four-part series:
 <br><br>
-[AI Governance Fundamentals](/training/ai-governance/ai-governance-register.qmd){.button target="_blank"}
+[AI Governance](/training/ai-governance/ai-governance-register.qmd){.button target="_blank"}
 :::
 
 ## Module 2 — Contents {.center}
