--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Understanding <br>AI Governance"
-subtitle: "AI Governance Fundamentals — Module 1 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
+subtitle: "AI Governance — Module 1 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
   revealjs:
@@ -35,7 +35,7 @@ _"As someone new to **AI governance**, I want to understand key concepts, how AI
 <br>
 This first module is part of a four-part series:
 <br><br>
-[AI Governance Fundamentals](/training/ai-governance/ai-governance-register.qmd){.button target="_blank"}
+[AI Governance](/training/ai-governance/ai-governance-register.qmd){.button target="_blank"}
 :::
 
 
