--- a/site/get-started/get-started.qmd
+++ b/site/get-started/get-started.qmd
@@ -36,6 +36,8 @@ listing:
     fields: [title, description]
 ---
 
+Our [quickstarts](/get-started/get-started.qmd) are the quickest and easiest ways to try out our product features.
+
 :::{#quickstart}
 :::
 
