Remove support number

--- a/site/support/support.qmd
+++ b/site/support/support.qmd
@@ -93,13 +93,7 @@ If you have a {{< var vm.product >}} account, send a message from your login ema
 
 ::: {.w-50-ns .pr4}
 
-::: {.pt3}
-##### {{< fa phone solid size=xl >}}&ensp;Phone 
-Call **+1 (877) 761-6777.**
-
-If you have a {{< var vm.product >}} account, provide your login email to help us identify you.
-
-:::
+&nbsp;
 
 :::
 
