--- a/site/about/overview.qmd
+++ b/site/about/overview.qmd
@@ -23,11 +23,9 @@ listing:
     fields: [title, description]
     contents:
     - ../get-started/get-started.qmd
-    - ../training/training.qmd
-    - path: https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb
-      title: "Quickstart for model documentation"
-      subtitle: "Open notebook in JupyterHub {{< fa chevron-right >}}"
-      description: "Gets you started with the basic process of documenting models with {{< var vm.product >}}, from the {{< var vm.developer >}} to the {{< var vm.platform >}}."
+    - path: ../training/training.qmd
+      title: "Training"
+      description: "Gain practical experience and discover what the platform has to offer with our hands-on training courses."
 aliases:
   - /guide/overview.html
 ---
