--- a/site/training/ai-governance/configuring-ai-workflows.qmd
+++ b/site/training/ai-governance/configuring-ai-workflows.qmd
@@ -44,7 +44,7 @@ This third module is part of a four-part series:
 1. [Intake workflows](#intake-workflows)
 2. [Approval workflows](#approval-workflows)
 3. [Human oversight controls](#human-oversight-controls)
-4. [Escalations](#attestations-and-escalation)
+4. [Escalations](#escalations)
 
 :::
 
@@ -143,20 +143,9 @@ Set up periodic review workflows:
 
 # Escalations {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
-## Attestations {.center}
-
-Attestations are formal confirmations that requirements have been met.
-
-Use attestations for:
-
-- Policy compliance confirmations
-- Periodic certification
-- Control effectiveness sign-offs
-- Regulatory submissions
-
 ## Escalation paths {.center}
 
-Configure escalation for:
+Configure escalations for:
 
 - Overdue approvals
 - High-risk findings
