--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -14,7 +14,7 @@ If you have a specific topic in mind, [let us know](/training/training.qmd#conne
 
 Develop role-based expertise for your entire organization.
 
-### AI Governance Fundamentals
+### AI Governance
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -58,7 +58,7 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 
 - Set up intake and approval workflows
 - Configure human oversight controls
-- Manage attestations and escalation paths
+- Manage escalation paths
 :::
 
 ::: {.w-50-ns}
