--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -89,8 +89,8 @@ listing:
 **{{< var validmind.training >}}**
 :::
 
-:::: {.f4 .w-60}
-Our **free** training courses make navigating **AI and governance** straightforward, practical, and even fun — gain **hands-on experience** and discover the platform that simplifies **model risk management**!
+:::: {.f4 .w-80}
+Gain **practical experience** and discover what the platform has to offer with our **hands-on** training courses.
 :::
 
 :::
