Edit: Configure workflows

--- a/site/guide/workflows/configure-workflows.qmd
+++ b/site/guide/workflows/configure-workflows.qmd
@@ -43,6 +43,28 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 Click **Tidy Layout** at any time for a linear view of your workflow.
 :::
 
+## Clone existing workflows
+
+To create a copy of an existing workflow:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Workflows**.
+
+3. Select the tab for the type of workflow to clone:
+
+    - **Model Workflows** — Workflows that apply to models in your inventory.[^3]
+    - **Artifact Workflows** — Workflows that apply to logged artifacts.[^4]
+
+4. Hover over the workflow you'd like to clone.
+
+5.  When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **{{< fa copy >}} Clone Workflow**.
+
+6. Make your changes to the workflow's **[title]{.smallcaps}** and **[workflow type]{.smallcaps}**.
+
+    Additional changes can be made to the cloned workflow after cloning by editing.[^5]
+
+
 ## Edit existing workflows
 
 You can edit a workflow in several ways:
@@ -61,7 +83,7 @@ You can edit a workflow in several ways:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^3]
+2. Select a model or find your model by applying a filter or searching for it.[^6]
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -71,7 +93,7 @@ You can edit a workflow in several ways:
 
 #### Via workflows applied to artifacts
 
-1. On the details page of your artifact,[^4] locate the [active workflows]{.smallcaps} section.
+1. On the details page of your artifact,[^7] locate the [active workflows]{.smallcaps} section.
 
 2. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
 
@@ -79,7 +101,7 @@ You can edit a workflow in several ways:
 
 :::
 
-a. Make your desired changes to step configuration[^5] and step relationships[^6] on your workflow.
+a. Make your desired changes to step configuration[^8] and step relationships[^9] on your workflow.
 
 b. When you are finished, click **Save Workflow** to apply your changes.
 
@@ -136,10 +158,17 @@ Deleting workflow steps on workflows active on models may result in malfunctioni
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
 
-[^4]: [View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts)
+[^4]: [Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)
 
-[^5]: [Configure workflow steps](#configure-workflow-steps)
+[^5]: If a cloned workflow's [workflow start]{.smallcaps} trigger conflicts with an existing workflow, the cloned workflow will be set to manual initiation instead.
 
-[^6]: [Link workflow together](#link-workflow-together)
+[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^7]: [View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts)
+
+[^8]: [Configure workflow steps](#configure-workflow-steps)
+
+[^9]: [Link workflow together](#link-workflow-together)
+
