--- a/site/notebooks/EXECUTED/model_development/2-start_development_process.ipynb
+++ b/site/notebooks/EXECUTED/model_development/2-start_development_process.ipynb
@@ -813,21 +813,18 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "# Logistic Regression grid params (future-proof)\n",
     "log_reg_params = {\n",
     "    \"l1_ratio\": [0.0, 1.0],  # 0 -> L2, 1 -> L1\n",
     "    \"C\": [0.001, 0.01, 0.1, 1, 10, 100, 1000],\n",
-    "    \"solver\": [\"saga\"],\n",
-    "    \"max_iter\": [5000],      # saga may need more iterations\n",
     "}\n",
     "\n",
     "grid_log_reg = GridSearchCV(\n",
-    "    LogisticRegression(),\n",
+    "    LogisticRegression(\n",
+    "        solver=\"saga\",\n",
+    "        penalty=\"elasticnet\",   # <-- key change\n",
+    "        max_iter=5000,\n",
+    "    ),\n",
     "    log_reg_params,\n",
-    "    # optional but common:\n",
-    "    # scoring=\"roc_auc\",\n",
-    "    # cv=5,\n",
-    "    # n_jobs=-1,\n",
     ")\n",
     "\n",
     "grid_log_reg.fit(X_train, y_train)\n",
