--- a/site/about/use-cases/ai-governance.qmd
+++ b/site/about/use-cases/ai-governance.qmd
@@ -1,17 +1,18 @@
 ---
 title: "AI governance"
 date: last-modified
+listing:
+  - id: ai-governance-next-steps
+    type: grid
+    grid-columns: 2
+    max-description-length: 250
+    sort: false
+    contents:
+    - ../training/ai-governance/ai-governance-register.qmd
+    - eu-ai-act.qmd
 ---
 
 AI governance is the organizational framework for directing and overseeing how AI is designed, deployed, and used. It sets policy, accountability, and decision rights, covering ethics, compliance, risk appetite, lifecycle controls, and ongoing oversight across people, process, and technology.
-
-## Unit of management
-
-In AI governance, the primary unit of management is the **AI system** or **AI use case** — not the individual model. This distinction matters because:
-
-- An AI system may contain multiple models, rules, or algorithms
-- Governance focuses on how AI is used and its impact on stakeholders
-- Oversight applies to both model-based and non-model AI applications
 
 ## Focus areas
 
@@ -43,12 +44,61 @@ AI governance programs produce documentation that demonstrates oversight:
 
 ## Using {{< var vm.product >}} for AI governance
 
-{{< var vm.product >}} supports AI governance workflows through:
+{{< var vm.product >}} supports AI governance workflows through a unified platform:
 
-- **Inventory management** — Track AI systems and use cases with customizable fields for risk classification, impact levels, and ownership
-- **Workflow configuration** — Set up intake, approval, and deployment workflows aligned to your governance policies
-- **Documentation templates** — Generate and maintain use case documentation that meets regulatory requirements
-- **Dashboards and reporting** — Monitor compliance status and governance metrics across your AI portfolio
+```{mermaid}
+flowchart TB
+    center((AI Governance<br>Platform))
+    
+    inv((Inventory))
+    wf((Workflows))
+    docs((Documents<br>& Templates))
+    reg((Regulations<br>& Policies))
+    dep((Dependencies))
+    life((Lifecycle))
+    lib((Content<br>Library))
+    
+    center --- inv
+    center --- wf
+    center --- docs
+    center --- reg
+    center --- dep
+    center --- life
+    center --- lib
+```
+
+:::::: {.columns}
+
+::: {.column width="50%" .pr3}
+
+**Inventory**  
+Captures record types, defines custom fields, and identifies stakeholders.
+
+**Workflows**  
+Manages review cycles, approval paths, and assigned tasks.
+
+**Documents & Templates**  
+Provides standard forms, reports, and documentation templates.
+
+**Regulations & Policies**  
+Includes internal policies, external regulations, and compliance frameworks.
+
+:::
+
+::: {.column width="50%" .pl3}
+
+**Dependencies**  
+Maps data sources, model relationships, and interconnected systems.
+
+**Lifecycle**  
+Governs development, deployment, monitoring, and retirement stages.
+
+**Content Library**  
+Offers reusable components, a knowledge base, and additional resources.
+
+:::
+
+::::::
 
 ::: {.attn}
 
@@ -56,7 +106,5 @@ AI governance programs produce documentation that demonstrates oversight:
 
 Explore our implementation guides for specific regulatory frameworks:
 
-- [EU AI Act implementation guide](eu-ai-act.qmd)
-- [Model risk management](model-risk-management.qmd)
-
+:::{.use-case-listing}
 :::
