--- a/site/about/use-cases/eu-ai-act.qmd
+++ b/site/about/use-cases/eu-ai-act.qmd
@@ -3,11 +3,14 @@ title: "EU AI Act"
 date: last-modified
 ---
 
-This guide complements the existing EU AI Act product demo by providing detailed, step-by-step guidance on implementing EU AI Act compliance using {{< var vm.product >}}. The documentation will:
+This guide provides detailed, step-by-step guidance on implementing EU AI Act compliance using {{< var vm.product >}}. The documentation will:
 
 1. Walk you through the practical steps required to implement what is shown in the demo
+
 2. Link to existing documentation for specific product features
+
 3. Focus on actionable implementation rather than just explaining requirements
+
 4. Link to training resources where relevant
 
 ## Overview
@@ -19,8 +22,11 @@ The EU AI Act establishes requirements across six key areas for high-risk AI sys
 The EU AI Act categorizes AI systems by risk level:
 
 - **Prohibited** — AI systems that pose unacceptable risks (e.g., social scoring, real-time biometric identification in public spaces)
+
 - **High-risk** — AI systems in critical areas requiring strict compliance (e.g., employment, credit scoring, law enforcement)
+
 - **Limited risk** — AI systems with transparency obligations (e.g., chatbots, emotion recognition)
+
 - **Minimal risk** — AI systems with no specific requirements
 
 ### Harmonization with other standards
@@ -36,14 +42,17 @@ The EU AI Act requirements overlap with existing model risk management framework
 ### Steps
 
 1. **Complete the risk classification questionnaire**
+
    - Configure custom inventory fields to capture EU AI Act risk classification
    - Set up fields for prohibited, high-risk, limited-risk, and minimal-risk categories
 
 2. **Map fields to EU AI Act requirements**
+
    - Create custom fields aligned to Article 9 requirements
    - Document risk assessment criteria and thresholds
 
 3. **Set up custom workflows for different risk levels**
+
    - Configure approval workflows based on risk classification
    - High-risk systems require additional review gates
 
@@ -61,18 +70,22 @@ The EU AI Act requirements overlap with existing model risk management framework
 ### Steps
 
 1. **Initialize the {{< var vm.developer >}}**
+
    - Set up the developer environment for data quality testing
    - Connect to your data sources
 
 2. **Implement out-of-the-box data quality tests**
+
    - Run automated tests for data completeness, accuracy, and relevance
    - Document data quality metrics
 
 3. **Create custom tests for your specific data requirements**
+
    - Extend the test framework for domain-specific quality checks
    - Implement bias detection tests
 
 4. **Centralize governance for oversight**
+
    - Configure dashboards to monitor data quality across systems
    - Set up alerts for data quality issues
 
@@ -90,22 +103,27 @@ The EU AI Act requirements overlap with existing model risk management framework
 ### Steps
 
 1. **Work with documentation templates**
+
    - Select or create templates aligned to EU AI Act requirements
    - Configure sections for system description, design, and compliance
 
 2. **Discover and use tests**
+
    - Map available tests to Article 11 documentation requirements
    - Run tests to generate evidence
 
 3. **Customize sections for specific use cases**
+
    - Add custom sections for AI system-specific requirements
    - Document intended purpose, design choices, and limitations
 
 4. **Leverage AI-assisted documentation features**
+
    - Use document generation to accelerate documentation
    - Review and refine AI-generated content
 
 5. **Add content blocks**
+
    - Insert additional evidence and documentation as needed
    - Link artifacts to documentation sections
 
@@ -123,22 +141,27 @@ The EU AI Act requirements overlap with existing model risk management framework
 ### Steps
 
 1. **Prepare validation reports**
+
    - Set up validation report templates
    - Configure validation workflows
 
 2. **Link evidence to compliance requirements**
+
    - Map test results to Article 15 requirements
    - Document accuracy metrics and thresholds
 
 3. **Create and document challenger models**
+
    - Implement challenger model workflows
    - Compare performance across models
 
 4. **Record findings and remediations**
+
    - Track validation findings
    - Document remediation actions
 
 5. **Assess compliance**
+
    - Generate compliance summaries
    - Review against Article 15 criteria
 
