--- a/site/about/overview.qmd
+++ b/site/about/overview.qmd
@@ -24,15 +24,15 @@ listing:
     contents:
     - ../get-started/get-started.qmd
     - path: ../training/training.qmd
-      title: "Training"
+      title: "Training courses"
       description: "Gain practical experience and discover what the platform has to offer with our hands-on training courses."
 aliases:
   - /guide/overview.html
 ---
 
-{{< var vm.product >}} is the system of record for AI governance. It models the full lifecycle of AI systems, models, use cases, and tools, along with their dependencies, and automates the governance and documentation built on top.
+{{< var vm.product >}} is the system of record for AI governance. It models the full lifecycle of AI systems, models, use cases, and tools, along with their dependencies, and automates the governance and documentation you build on top.
 
-The platform is designed as a multi tier AI governance system that lets you define your own inventory hierarchy, dependencies, and governance rules, powered by {{< var vm.product >}}’s documentation, workflow, and analytics engine.
+The platform is flexible by design and lets you define your own inventory hierarchy, dependencies, and governance rules, powered by {{< var vm.product >}}’s documentation automation, workflows, and analytics.
 
 ## What do I use {{< var vm.product >}} for?
 
